<resources>
    <string name="app_name">Prasyarat IF</string>
    <string name="tv_syarat_tempuh">Syarat Tempuh:</string>
    <string name="tv_syarat_bersama">Syarat Diambil Bersama:</string>
    <string name="tv_angkatan">Berlaku Mulai Angkatan:</string>
    <string name="tv_detil_matkul">Detail Mata Kuliah</string>
    <string name="tv_syarat_lulus">Syarat Lulus:</string>
    <string name="tv_tentang">Tentang Aplikasi Ini</string>
    <string name="tv_keterangan">Aplikasi ini dibuat untuk membantu mahasiswa jurusan Teknik Informatika UNPAR untuk melihat daftar mata kuliah pada setiap semester dan prasyarat dari setiap mata kuliah dengan mudah. Pengguna juga bisa menandai mata kuliah favorit supaya bisa diakses dengan lebih cepat. Seluruh data yang digunakan berasal dari repository FTIS UNPAR Open Data.</string>
    <string name="tv_kontributor">Para Kontributor</string>
    <string name="tv_arjuna">Arjuna Simanjuntak</string>
    <string name="tv_npm1">2017730057</string>
    <string name="tv_michael">Michael Murriyanto Singgih</string>
    <string name="tv_npm2">2017730078</string>
    <string name="tv_jiang">Jiang Han</string>
    <string name="tv_npm3">6181801034</string>
    <string name="tv_nicholas">Nicholas Khrisna Sandyawan</string>
    <string name="tv_npm4">6181801060</string>

    <string name="menu_title_beranda">Beranda</string>
    <string name="menu_title_berbintang">Berbintang</string>
    <string name="menu_title_repo">Repository</string>
    <string name="menu_title_tentang">Tentang</string>
    <string name="top_app_bar">Prasyarat IF</string>

    <string name="matkul_wajib">Wajib</string>
    <string name="matkul_tidak_wajib">Pilihan</string>
    <string name="matkul_tidak_ada_angkatan">Tidak ada berlaku angkatan</string>
    <string name="matkul_no_prasyarat">Tidak ada prasyarat</string>
    <string name="insignt_lulus">" Mata kuliah ini menjadi prasyarat lulus bagi %d mata kuliah lain"</string>
    <string name="insignt_tempuh">" Mata kuliah ini menjadi prasyarat tempuh bagi %d mata kuliah lain"</string>
    <string name="insignt_depth">" Mata kuliah ini memiliki rantai prasyarat sepanjang %d"</string>

    <string name="berbintang_title">Berbintang</string>
</resources>