<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_beranda"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_title_beranda"
            android:checked="true" />
        <item
            android:id="@+id/menu_item_berbintang"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_title_berbintang" />
        <item
            android:id="@+id/menu_item_repo"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_title_repo" />
        <item
            android:id="@+id/menu_item_tentang"
            android:icon="@drawable/ic_cloud"
            android:title="@string/menu_title_tentang" />
    </group>
</menu>